# copier-php-yii2

./: README.md  copier.yml  pyproject.toml
copier/questions/: features.yml  php.yml  project.yml
template/: .env.template.jinja  .gitignore  Dockerfile  captainhook.json  composer.json.jinja  docker-compose.yml.jinja
template/.github/workflows/: test.yml
template/config/: console.php.jinja  db.php.jinja  main.php  main.php.jinja  web.php.jinja
template/nginx/: default.conf
template/public/: index.php
template/src/controllers/: SiteController.php.jinja
template/tests/unit/: ExampleTest.php.jinja
tests/: test_template.py
