[project]
name = "copier-php-yii2"
version = "0.1.0"
description = "A Copier template for PHP projects with Yii2 framework."
requires-python = ">=3.10"
authors = [
    { name = "Garrett HE", email = "garrett.he@outlook.com" }
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
keywords = ["copier", "template", "code-generation", "php"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
homepage = "https://github.com/garrett-he/copier-php-yii2"
repository = "https://github.com/garrett-he/copier-php-yii2.git"
changelog = "https://github.com/garrett-he/copier-php-yii2/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "chance (>=0.110,<0.111)",
    "copier-templates-extensions (>=0.3.0,<1.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-copie (>=0.2.1,<1.0.0)",
]

[tool.pytest.ini_options]
addopts = "--ignore='template' -p no:warnings"

[tool.pdm]
distribution = false
